Refine README formatting and content
Updated README.md to improve formatting and clarity.