@@ -1,13 +1,16 @@
 # ☁️ SyncVault
-
 SyncVault is a self-hosted, full-stack cloud synchronization platform. It features a Spring Boot REST API backed by AWS S3, and a native Windows background daemon that provides real-time, two-way file synchronization with secure JWT authentication and multi-user support.
 
-## ✨ Features
+### SyncVault Demo Video
+[Watch the SyncVault Demo Here](https://www.youtube-nocookie.com/embed/mneZNZqm8EU?autoplay=1&mute=1&loop=1)
+
+## ✨ Core Features
 * **Real-Time Synchronization:** Automatically detects file changes locally and syncs them to your private cloud storage.
+* **SQLite Tombstoning:** Local file states (and deletions) are tracked in a transaction-safe embedded SQLite database to prevent memory drift and data loss during sudden crashes.
 * **Chunked Uploads:** Bypasses standard HTTP request size limits by splitting large files into chunks for reliable AWS S3 delivery.
-* **Native Windows Integration:** Runs seamlessly in the background with a modern System Tray menu and a native `.exe` Windows installer.
+* **Native Windows Integration:** Runs seamlessly in the background with a modern System Tray menu.
 * **Secure Multi-User Architecture:** Supports multiple accounts on the same PC by isolating local file states using dynamic SQLite databases stored safely in the user's home directory.
-* **JWT Authentication:** Stateless, secure API communication with token persistence.
+* **JWT Authentication:** Stateless, secure API communication with persistent token sessions.
 * **Resilient Connection:** Built-in heartbeat monitor that handles server downtime and auto-reconnects without spamming logs.
 
 ## 🛠️ Tech Stack
@@ -18,9 +21,9 @@ SyncVault is a self-hosted, full-stack cloud synchronization platform. It featur
 * JSON Web Tokens (JWT) for Authentication
 
 **Frontend (Desktop Client)**
-* Java (AWT / Swing for UI)
+* Java 21 (AWT / Swing for UI)
+* Maven (Dependency & Build Management)
 * SQLite (Local sync state management)
-* `jpackage` & WiX Toolset (Native Windows `.exe` bundling)
 
 ---
 
@@ -35,7 +38,6 @@ The server is designed to run on an Ubuntu Linux environment using background ex
 
 ### 2. Environment Variables
 For security, credentials are **never** hardcoded. Create a hidden script on your server (e.g., `~/.syncvault_secrets.sh`) and add your production values:
-
 ```bash
 # JWT and Auth Secrets
 export JWT_SECRET="your_super_long_random_jwt_secret"
@@ -52,38 +54,38 @@ export SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE="10MB"
 export SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE="10MB"
 ```
 ### 3. Build & Run
-1. Build the project locally: `./mvnw clean package -DskipTests`
-2. Securely copy the `target/server-0.0.1-SNAPSHOT.jar` to your EC2 instance.
-3. Start the server in the background:
-
+1. Build the project locally:
+```bash
+./mvnw clean package -DskipTests
+```
+3. Securely copy the `target/server-0.0.1-SNAPSHOT.jar` to your EC2 instance.
+4. Start the server in the background:
 ```bash
 source ~/.syncvault_secrets.sh
 nohup java -jar target/server-0.0.1-SNAPSHOT.jar > server.log 2>&1 &
 ```
-
 ---
 
 ## 💻 Client Installation & Build
 
-The client is bundled into a native Windows Installer (`.exe`) so users don't need to mess with `.jar` files or terminals.
+The client is built using Maven, which handles all dependency resolution (like `sqlite-jdbc`) automatically.
 
-### 1. Build the Client Jar
-Compile your client code and ensure `sqlite-jdbc.jar` is included in your classpath.
+### 1. Prerequisites
+* Java 21 installed on your local machine.
+* Maven installed and added to your system PATH.
 
-### 2. Create the Windows Installer
-Use the `jpackage` tool (requires WiX toolset installed on your Windows machine) to generate the exe. 
-Run this command from your build directory:
-
-```cmd
-jpackage --type exe --dest output_installers --input package_input --name SyncVault --main-jar SyncVaultClient.jar --main-class SyncDaemon --win-dir-chooser --win-shortcut --win-menu --add-modules java.sql,java.naming,java.desktop,jdk.unsupported --app-version 1.0
+### 2. Build & Run the Client
+Navigate to your client directory in your terminal and run the following commands to compile and execute the application:
+```bash
+mvn clean compile
+mvn exec:java -Dexec.mainClass="SyncDaemon"
 ```
-*Note: The `--add-modules java.sql` flag is strictly required to prevent the bundled JRE from stripping out the SQLite database drivers.*
+*(Note: Replace `"SyncDaemon"` with the actual fully-qualified name of your main class if it is located inside a package, e.g., `"com.syncvault.SyncDaemon"`).*
 
 ### 3. Usage
-1. Install the resulting `SyncVault-1.0.exe`.
-2. Launch the app from the Start Menu.
-3. Right-click the SyncVault icon in your System Tray and select **Settings** to configure your server URL.
-4. Log in, select your sync folder, and your files will begin syncing immediately!
+1. Once the application starts, check your Windows System Tray for the SyncVault icon.
+2. Right-click the icon and select **Settings** to configure your server URL.
+3. Log in, select your target sync folder, and your background daemon will begin syncing immediately!
 
 ---
 
